# matso

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AI Command Staff Architecture and Domain-Specific Training.md  CLAUDE.md  CODE_REVIEW.md  HOW_TO.md  PROGRESS.md  SPEC.md  SPEC_EXTEND.md  SPEC_FULL.md  SPEC_INGEST.md  TASKS.md  buf.yaml  pyproject.toml
ai/: README.md  pyproject.toml
ai/evals/: EvalCreator.md  case.schema.json
ai/evals/cases/: README.md  intel-degraded-001.yaml  opfor-contradictory-001.yaml  opfor-ihl-001.yaml
ai/matso_ai/: __init__.py  prompts.py  roles.py
ai/matso_ai/evals/: __init__.py  cases.py  run.py
ai/matso_ai/inference/: __init__.py  client.py  invocation_log.py  role_manager.py
ai/matso_ai/ingest/: __init__.py  cli.py  parse.py  promote.py  structure.py
ai/matso_ai/rag/: __init__.py  chunker.py  embedder.py  ingest.py  store.py  verifier.py
ai/prompts/: AAR_ANALYST.md  INTEL_OFFICER.md  OPFOR_COMMANDER.md  STRATEGIC_PLANNER.md  WHITE_CELL_ASSISTANT.md
ai/rag/: DataSearch.md
ai/rag/corpus/: README.md
ai/rag/corpus/doctrine_blue/: _collection.md
ai/rag/corpus/doctrine_general/: _collection.md
ai/rag/corpus/doctrine_red/: _collection.md  red_delay_ops.md
ai/rag/corpus/equipment_specs/: _collection.md
ai/rag/corpus/historical_ops/: _collection.md
ai/rag/corpus/terrain_analysis/: _collection.md
ai/tests/: test_client.py  test_evals.py  test_ingest.py  test_invocation_log.py  test_rag.py  test_role_manager.py
contracts/: README.md  ai_output.schema.json  (+8 more)
core/: Dockerfile  README.md  pyproject.toml
core/app/: __init__.py  cache.py  config.py  db.py  errors.py  footprint.py  main.py  runtime.py  sim_control.py  sim_runtime.py  terrain.py  weather.py
core/app/aar/: __init__.py  events.py  export.py  narrative.py  replay.py  stats.py
core/app/adjudication/: __init__.py  adjudicator.py  aggregate.py  combined.py  effectiveness.py  engagement.py  seed_equipment.py  seed_weapons.py  trajectory.py  weapon.py
core/app/ai_loop/: __init__.py  opfor.py
core/app/api/: __init__.py  aar.py  auth.py  control.py  deps.py  equipment.py  errors.py  inject.py  intel.py  lobby.py  map_features.py  movement.py  orbat.py  orders.py  scenarios.py  session_scope.py  units.py  users.py  ws.py
core/app/auth/: __init__.py  hashing.py  schemas.py  service.py  tokens.py  user_service.py
core/app/comms/: __init__.py  consequences.py  link_budget.py
core/app/engine/: __init__.py  clock.py  comms.py  engage_wiring.py  kernel.py  movement.py  rng.py  subsystems.py
core/app/factions/: __init__.py  relations.py
core/app/guardrails/: __init__.py  gateway.py  guardrail_profiles.yaml  modes.py  profiles.py  schemas.py
core/app/intel/: __init__.py  schemas.py  seed_sensors.py  sensor.py  sensor_system.py  service.py  store.py  sweep.py
core/app/lobby/: __init__.py  schemas.py  service.py
core/app/models/: __init__.py  enums.py  tables.py
core/app/movement/: __init__.py  attrition.py  db_store.py  params.py  planner.py  system.py
core/app/orders/: __init__.py  precheck.py  schemas.py  service.py  state_machine.py  validator.py
core/app/plugins/: __init__.py  comms_client.py  terrain_client.py  weather_client.py
core/app/scenario/: __init__.py  dump.py  loader.py  triggers.py
core/app/state/: __init__.py  broadcaster.py  checkpoint.py  hot_state.py  ledger.py  live_ammo.py  redis_stream.py
core/app/stream/: __init__.py  backfill.py  faction_filter.py  identity.py  publish.py  sender.py
core/tests/: conftest.py
core/tests/integration/: conftest.py  test_checkpoint_recovery.py  test_comms_integration.py  test_hot_state_redis.py  test_ledger_mariadb.py  test_scripted_battle.py  test_weather_integration.py
core/tests/property/: test_aggregate.py  test_engagement.py
core/tests/replay/: harness.py  scenarios.py  test_golden.py  test_golden_placeholder.py
core/tests/replay/goldens/: empty_100.json  order_replay_60.json  rng_walk_100.json
core/tests/unit/: _auth_fakes.py  _order_fakes.py  test_aar.py  test_aar_api.py  test_adjudicator.py  test_ai_loop.py  test_ai_modes.py  test_auth_api.py  test_auth_hashing.py  test_auth_service.py  test_auth_tokens.py  test_checkpoint.py  test_circuit_breaker.py  test_clock.py  test_combined_engagement.py  test_comms.py  test_comms_consequences_gate.py  test_comms_link_budget.py  test_comms_system.py  test_config_safety.py  test_control_api.py  test_effectiveness.py  test_engage_weapons.py  test_engage_wiring.py  test_engagement_strength.py  test_engagement_volley.py  test_equipment.py  test_event_broadcast.py  test_factions.py  test_footprint.py  test_guardrails.py  test_health_monitor.py  test_healthz.py  test_hot_state.py  test_inject_api.py  test_intel_api.py  test_intel_isolation.py  test_intel_store.py  test_kernel.py  test_ledger.py  (+40 more)
modules/_sdk/: pyproject.toml
modules/_sdk/matso_sdk/: __init__.py  _base_servicer.py  harness.py  health.py  manifest.py  plugin.py  server.py
modules/_sdk/tests/: test_sdk_harness.py
modules/comms/: Dockerfile  pyproject.toml
modules/comms/comms/: __init__.py  __main__.py  link_budget.py  mesh.py  plugin.py  service.py
modules/comms/tests/: test_comms_main.py  test_comms_plugin.py  test_link_budget.py  test_mesh.py
modules/terrain/: .env.example  Dockerfile  pyproject.toml
modules/terrain/terrain/: __init__.py  __main__.py  config.py  dted.py  errors.py  hexgrid.py  los.py  mobility.py  pathfind.py  plugin.py  precompute.py  service.py
modules/terrain/tests/: conftest.py  make_fixture.py  test_dted.py  test_hexgrid.py  test_los.py  test_main.py  test_pathfind.py  test_plugin.py
modules/terrain/tests/grass_compare/: README.md  compare.py  test_grass_compare.py
modules/weather/: Dockerfile  pyproject.toml
modules/weather/tests/: test_cwa.py  test_effects.py  test_live.py  test_schema.py  test_synthetic.py  test_weather_main.py  test_weather_plugin.py
modules/weather/weather/: __init__.py  __main__.py  config.py  cwa.py  effects.py  live.py  payload.py  plugin.py  provider.py  service.py  synthetic.py
(+147 files in other folders)
