# MATSO uv workspace root（虛擬 package，不建置）— ADR 001
# 共用工具設定（ruff / mypy / pytest）集中於此；各 member 只宣告自己的 runtime deps。

[project]
name = "matso-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "modules/_sdk", "modules/terrain", "modules/weather", "modules/comms", "ai"]

[tool.uv.sources]
matso-core = { workspace = true }
matso-sdk = { workspace = true }
matso-terrain = { workspace = true }
matso-weather = { workspace = true }
matso-comms = { workspace = true }
matso-ai = { workspace = true }

[dependency-groups]
dev = [
  # workspace members（editable 安裝進根 venv，讓 uv run pytest / mypy 一次涵蓋）
  "matso-core",
  "matso-sdk",
  "matso-terrain",
  "matso-weather",
  "matso-comms",
  "matso-ai",
  # 工具鏈
  "grpcio-tools>=1.68", # proto → Python stubs 離線 codegen（ops/tools/gen_proto.py, O2.5）
  "ruff>=0.9",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "hypothesis>=6.120",
  "httpx>=0.28",
  # 契約驗證（CI contract job 用）
  "check-jsonschema>=0.31",
  "jsonschema>=4.20", # 種子武器模板對 weaponeering.schema.json 驗證（O3.2 測試）
  "openapi-spec-validator>=0.7",
  "pytest-cov>=7.1.0",
  "schemathesis>=4", # Order 端點契約 fuzz（O3.1 驗收；v4 支援 OpenAPI 3.1）
  "fakeredis>=2.26", # WS stream 測試（async + pub-sub）免 compose 常駐 CI python job（O4.3）
]

# ---------------- Lint / Format ----------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "modules", "ai", "ops"]
# gRPC 產生的 stubs（不入 git、非本專案手寫）不受 lint/format 管轄
extend-exclude = ["**/_generated/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
# 專案註解/docstring 使用正體中文全形標點，RUF001-003 的 ambiguous-unicode 檢查全是誤報
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 依賴注入慣例：Depends/Query/Path 於參數預設值呼叫是刻意設計，非 B008 錯誤
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

# ---------------- Type Checking ----------------

[tool.mypy]
python_version = "3.12"
strict = true
files = [
  "core/app",
  "ops/tools",
  "modules/terrain/terrain",
  "modules/_sdk/matso_sdk",
  "modules/weather/weather",
  "modules/comms/comms",
  "ai/matso_ai",
]
# 各套件以自身 module root（獨立服務，不與 core 共 namespace）
mypy_path = "modules/terrain:modules/_sdk:modules/weather:modules/comms"
# 產生的 gRPC stubs 不型別檢查（protobuf 產物，不入 git）
exclude = ["modules/_sdk/matso_sdk/_generated/"]

[[tool.mypy.overrides]]
module = ["pymysql.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rasterio.*", "h3.*", "pyarrow.*", "networkx.*"]
ignore_missing_imports = true # 地理/圖論套件無完整型別 stubs

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*", "matso_sdk._generated.*"]
ignore_missing_imports = true # grpcio 無 stubs；_generated 為 protobuf 產物

[[tool.mypy.overrides]]
# 這些類別繼承 gRPC 產生的 servicer 基底（型別為 Any）——strict 的 subclassing-any 於此放行
module = ["matso_sdk._base_servicer", "terrain.service", "weather.service", "comms.service"]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
# gRPC 邊界模組：呼叫 protobuf 產生的（無型別）stub/servicer 工廠、回傳其結果。
# 這些是與外部產物的介面，untyped-call / any-return 屬預期；其餘 strict 檢查照舊。
module = [
  "matso_sdk._base_servicer",
  "matso_sdk.server",
  "matso_sdk.harness",
  "terrain.service",
  "terrain.plugin",
  "app.plugins.terrain_client",
  "app.plugins.weather_client",
  "app.plugins.comms_client",
  "weather.service",
  "weather.plugin",
  "comms.service",
  "comms.plugin",
  "app.api.ws", # redis.asyncio pub-sub/aclose 邊界（無完整型別）
]
disallow_untyped_calls = false
warn_return_any = false

# ---------------- Tests ----------------

[tool.pytest.ini_options]
testpaths = [
  "core/tests",
  "modules/terrain/tests",
  "modules/_sdk/tests",
  "modules/weather/tests",
  "modules/comms/tests",
  "ai/tests",
]
asyncio_mode = "auto"
markers = [
  "golden: golden replay determinism tests (SPEC_FULL §19.1, harness lands in M1-6)",
  "integration: needs external services via compose (MariaDB/Redis/...); skips if unreachable",
  "realdata: needs the real DTED file (external drive + MATSO_DTED_PATH); skips otherwise",
  "grass: cross-checks against GRASS r.viewshed via docker (O2.3); CI skip, run before release",
  "benchmark: 夾具版效能 SLA（p99）——絕對時間依硬體而定，共享 CI runner 不穩，故 CI 排除（-m 'not benchmark'），於本機/真檔驗（真檔版標 realdata）",
]
filterwarnings = [
  # rasterio 1.5.0 × numpy 2.5 的內部 reshape 棄用警告（上游相容問題，非本專案程式碼；
  # rasterio 修復後移除此行——見 PROGRESS backlog）
  "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

# ---------------- Coverage（SPEC_FULL §19.3：core ≥80%；CI python job 強制） ----------------

[tool.coverage.run]
source = ["core/app", "modules/terrain/terrain", "modules/weather/weather", "modules/comms/comms", "ai/matso_ai"]

[tool.coverage.report]
fail_under = 80
show_missing = true
