[project]
name = "matso-ai"
version = "0.1.0"
description = "MATSO AI subsystem — RoleManager / RAG / evals (SPEC_FULL §9; implemented in M6)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matso_ai"]
