[project]
name = "matso-ai"
version = "0.1.0"
description = "MATSO AI subsystem — RoleManager / RAG / evals (SPEC_FULL §9; implemented in M6)"
requires-python = ">=3.12"
dependencies = [
  "qdrant-client>=1.12", # RAG 向量庫（含本機 :memory: 模式供測試，O6.3）
  "pyyaml>=6.0", # 語料 front-matter 解析
  "pymupdf>=1.24", # 文檔轉換：born-digital PDF 抽取（O9.1，SPEC_INGEST）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matso_ai"]
