[project]
name = "matso-core"
version = "0.1.0"
description = "MATSO Core Orchestrator (SPEC_FULL §2-3, §7-8, §10, §16)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy>=2.0.36",
  "pymysql>=1.1",
  "redis>=5.2",
  "structlog>=24.4",
  "numpy>=2.1", # DeterministicRNG（PCG64）；SimClock/RNG 為 P4 可重現性地基
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
