[project]
name = "matso-core"
version = "0.1.0"
description = "MATSO Core Orchestrator (SPEC_FULL §2-3, §7-8, §10, §16)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy>=2.0.36",
  "pymysql>=1.1",
  "redis>=5.2",
  "structlog>=24.4",
  "numpy>=2.1", # DeterministicRNG（PCG64）；SimClock/RNG 為 P4 可重現性地基
  "zstandard>=0.23", # SimCheckpoint 狀態快照壓縮（ADR 002）
  "matso-sdk", # Terrain plugin client：gRPC stubs（plugin_base + terrain）（O2.5）
  "grpcio>=1.68", # gRPC client（TerrainClient + 健檢/斷路器）
  "h3>=4.1", # 單位座標 → hex（Order 物理預檢的移動起點，O3.1）
  "argon2-cffi>=23.1", # 密碼 Argon2id 雜湊（O4.1 認證，SPEC §12）
  "pyjwt>=2.10", # JWT access/refresh token 簽發與驗證（O4.1）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
