[project]
name = "matso-sdk"
version = "0.1.0"
description = "MatsoPlugin base class + integration test harness (SPEC_FULL §17; implemented by M2-5)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matso_sdk"]
