[project]
name = "matso-comms"
version = "0.1.0"
description = "MATSO Comms/EW Module — 鏈路預算 + networkx mesh 連通 (SPEC_FULL §6; implemented in M5)"
requires-python = ">=3.12"
dependencies = [
  "matso-sdk", # MatsoPlugin base + gRPC stubs（插件化）
  "grpcio>=1.68", # gRPC server（CommsService）
  "pydantic-settings>=2.7", # MATSO_COMMS_* 環境設定
  "networkx>=3.4", # mesh multi-hop 連通（widest-path 至指揮節點）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comms"]
