[project]
name = "matso-terrain"
version = "0.1.0"
description = "MATSO Terrain Module — DTED / hex grid / LOS / A* (SPEC_FULL §4; implemented in M2)"
requires-python = ">=3.12"
# rasterio/GDAL/h3 等重依賴於 M2-1 加入，避免 M0 階段拖慢 uv sync
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terrain"]
