[project]
name = "matso-terrain"
version = "0.1.0"
description = "MATSO Terrain Module — DTED / hex grid / LOS / A* (SPEC_FULL §4; implemented in M2)"
requires-python = ">=3.12"
dependencies = [
  "rasterio>=1.4", # DTED GeoTIFF 讀取（wheel 內帶 GDAL）
  "numpy>=2.1",
  "pydantic-settings>=2.7", # MATSO_DTED_PATH 等環境設定（外接硬碟路徑注入）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terrain"]
