[project]
name = "matso-weather"
version = "0.1.0"
description = "MATSO Weather Module — CWA LIVE / SYNTHETIC / REPLAY (SPEC_FULL §5; implemented in M5)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather"]
